src/test/deca/context/invalid/class/10_returnMauvais.deca
/* Description:
    Tester le cas où le return n'est pas du bon type.

    Historique:
      cree le 20/01/2020
    Sortie attendue:


*/

class Test{
    float a;
    int methode() {
      return 0.12;
    }
}
